force-app/main/default/objects/Survey_Questions__c/Survey_Questions__c.object-meta.xml
<CustomObject>
    <label>Survey Questions</label>
    <nameField>
        <displayFormat>Survey Question - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>