force-app/main/default/objects/Survey_Questions__c/fields/AnswerText__c.field-meta.xml
<CustomField>
    <fullName>AnswerText__c</fullName>
    <label>AnswerText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>