force-app/main/default/objects/Survey_Questions__c/fields/Buying_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Buying_Behaviour__c</fullName>
    <label>Buying Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>