force-app/main/default/objects/Survey_Questions__c/fields/Commercial_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Negotiation__c</fullName>
    <label>Commercial Negotiation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completely Negotiable</fullName>
            </value>
            <value>
                <fullName>Negotiable</fullName>
            </value>
            <value>
                <fullName>Somewhat Negotiable</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Not Negotiable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>