force-app/main/default/objects/Survey_Questions__c/fields/Competition_Considering__c.field-meta.xml
<CustomField>
    <fullName>Competition_Considering__c</fullName>
    <label>Competition Considering</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nullified</fullName>
            </value>
            <value>
                <fullName>Somewhat Nullified</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Consider</fullName>
            </value>
            <value>
                <fullName>Consider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>