force-app/main/default/objects/Survey_Questions__c/fields/Competition_Considering_If_Other__c.field-meta.xml
<CustomField>
    <fullName>Competition_Considering_If_Other__c</fullName>
    <label>Competition Considering (If Other)</label>
    <type>TextArea</type>
</CustomField>