force-app/main/default/objects/Survey_Questions__c/fields/Customer_Relatives3_If_other__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relatives3_If_other__c</fullName>
    <label>Customer Relatives3 (If other)</label>
    <type>TextArea</type>
</CustomField>