force-app/main/default/objects/Survey_Questions__c/fields/Customer_Relatives_If_other__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relatives_If_other__c</fullName>
    <label>Customer Relatives (If other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>