force-app/main/default/objects/Survey_Questions__c/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <label>Decision Maker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Others*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>