force-app/main/default/objects/Survey_Questions__c/fields/Decision_Maker_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Engagement__c</fullName>
    <label>Decision Maker Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>