force-app/main/default/objects/Survey_Questions__c/fields/Decision_Maker_Relative__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Relative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker (Relative)</label>
    <type>Checkbox</type>
</CustomField>