force-app/main/default/objects/Survey_Questions__c/fields/Expected_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timeline__c</fullName>
    <label>Expected Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Within 15 Days</fullName>
            </value>
            <value>
                <fullName>Within 30 Days</fullName>
            </value>
            <value>
                <fullName>Within 60 Days</fullName>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>