force-app/main/default/objects/Survey_Questions__c/fields/Financial_Capability__c.field-meta.xml
<CustomField>
    <fullName>Financial_Capability__c</fullName>
    <label>Financial Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Feasible</fullName>
            </value>
            <value>
                <fullName>Feasible</fullName>
            </value>
            <value>
                <fullName>Somewhat Feasible</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Not Feasible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>