force-app/main/default/objects/Survey_Questions__c/fields/How_much_time_spent_in_site__c.field-meta.xml
<CustomField>
    <fullName>How_much_time_spent_in_site__c</fullName>
    <label>How much time spent in site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-15 Mins</fullName>
            </value>
            <value>
                <fullName>15-30 Mins</fullName>
            </value>
            <value>
                <fullName>30-60 Mins</fullName>
            </value>
            <value>
                <fullName>1-2 Hrs</fullName>
            </value>
            <value>
                <fullName>&gt;2 Hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>