force-app/main/default/objects/Survey_Questions__c/fields/Inventory_Shortlisting__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Shortlisting__c</fullName>
    <label>Inventory Shortlisting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inventory Finalised</fullName>
            </value>
            <value>
                <fullName>Shortlisted Multiple Inventory</fullName>
            </value>
            <value>
                <fullName>Considering Series/Wing</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>