force-app/main/default/objects/Survey_Questions__c/fields/Liking_or_inclination_for_property__c.field-meta.xml
<CustomField>
    <fullName>Liking_or_inclination_for_property__c</fullName>
    <label>Liking or inclination for property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liking</fullName>
            </value>
            <value>
                <fullName>Somewhat Liking</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Disliking</fullName>
            </value>
            <value>
                <fullName>Disliking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>