force-app/main/default/objects/Survey_Questions__c/fields/Our_standing_among_competition__c.field-meta.xml
<CustomField>
    <fullName>Our_standing_among_competition__c</fullName>
    <label>Our standing among competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>