force-app/main/default/objects/Survey_Questions__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <label>Question Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>