force-app/main/default/objects/Survey_Questions__c/fields/Show_Children__c.field-meta.xml
<CustomField>
    <fullName>Show_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Children</label>
    <type>Checkbox</type>
</CustomField>