force-app/main/default/objects/Survey_Questions__c/fields/Show_Individual__c.field-meta.xml
<CustomField>
    <fullName>Show_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Individual</label>
    <type>Checkbox</type>
</CustomField>