force-app/main/default/objects/Survey_Questions__c/fields/Show_Others__c.field-meta.xml
<CustomField>
    <fullName>Show_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Others</label>
    <type>Checkbox</type>
</CustomField>