force-app/main/default/objects/Survey_Questions__c/fields/Show_Parents__c.field-meta.xml
<CustomField>
    <fullName>Show_Parents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Parents</label>
    <type>Checkbox</type>
</CustomField>