force-app/main/default/objects/Survey_Questions__c/fields/Show_Relative__c.field-meta.xml
<CustomField>
    <fullName>Show_Relative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Relative</label>
    <type>Checkbox</type>
</CustomField>