force-app/main/default/objects/Survey_Questions__c/fields/Show_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Show_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Spouse</label>
    <type>Checkbox</type>
</CustomField>