force-app/main/default/objects/Survey_Questions__c/fields/Total_A__c.field-meta.xml
<CustomField>
    <fullName>Total_A__c</fullName>
    <label>Total A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>