force-app/main/default/objects/Survey_Questions__c/fields/Total_B__c.field-meta.xml
<CustomField>
    <fullName>Total_B__c</fullName>
    <label>Total B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>