force-app/main/default/objects/Survey_Questions__c/fields/Type_of_Question__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Question__c</fullName>
    <label>Type of Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PROJECT FEEDBACK</fullName>
            </value>
            <value>
                <fullName>SALES STAFF EXPERIENCE</fullName>
            </value>
            <value>
                <fullName>SITE EXPERIENCE</fullName>
            </value>
            <value>
                <fullName>OTHER FEEDBAK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>