force-app/main/default/objects/Survey_Questions__c/fields/Visit_Children__c.field-meta.xml
<CustomField>
    <fullName>Visit_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Children</label>
    <type>Checkbox</type>
</CustomField>