force-app/main/default/objects/Survey_Questions__c/fields/Visit_Individual__c.field-meta.xml
<CustomField>
    <fullName>Visit_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Individual</label>
    <type>Checkbox</type>
</CustomField>