force-app/main/default/objects/Survey_Questions__c/fields/Visit_Others__c.field-meta.xml
<CustomField>
    <fullName>Visit_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Others</label>
    <type>Checkbox</type>
</CustomField>