force-app/main/default/objects/Survey_Questions__c/fields/Visit_Parents__c.field-meta.xml
<CustomField>
    <fullName>Visit_Parents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Parents</label>
    <type>Checkbox</type>
</CustomField>