force-app/main/default/objects/Survey_Questions__c/fields/Visit_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Visit_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Spouse</label>
    <type>Checkbox</type>
</CustomField>