force-app/main/default/objects/Survey_Questions__c/fields/whom_does_prospect_want_to_show_the_site__c.field-meta.xml
<CustomField>
    <fullName>whom_does_prospect_want_to_show_the_site__c</fullName>
    <label>whom does prospect want to show the site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Others*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>