force-app/main/default/objects/Survey_Questions__c/fields/With_whom_did_prospect_visit_the_site__c.field-meta.xml
<CustomField>
    <fullName>With_whom_did_prospect_visit_the_site__c</fullName>
    <label>With whom did prospect visit the site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Others*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>